--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -15,7 +15,7 @@ WORKDIR ${DAPPER_SOURCE}
 ENTRYPOINT ["./dapper/entry"]
 CMD ["ci"]
 
-RUN zypper -n install gzip curl unzip git  && \
+RUN zypper -n install gzip curl unzip git awk && \
     rm -rf /var/cache/zypp/*
 
 RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin ${GOLANGCI_LINT_VERSION}
