--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -15,5 +15,9 @@ reviews:
     drafts: false
     base_branches:
       - main
+  path_filters:
+    - "!vendor/**"
+    - "!go.mod"
+    - "!go.sum"
 chat:
   auto_reply: true
