--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -3,7 +3,6 @@ FROM registry.suse.com/bci/golang:1.23
 ARG DAPPER_HOST_ARCH="amd64"
 
 ENV ARCH="${DAPPER_HOST_ARCH}"
-ENV GOLANGCI_LINT_VERSION="v1.60.3"
 
 ENV DAPPER_RUN_ARGS --privileged
 ENV DAPPER_ENV REPO TAG DRONE_TAG DRONE_REPO DRONE_PULL_REQUEST DRONE_COMMIT_REF
@@ -18,4 +17,4 @@ CMD ["ci"]
 RUN zypper -n install gzip curl unzip git awk && \
     rm -rf /var/cache/zypp/*
 
-RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin ${GOLANGCI_LINT_VERSION}
+RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
